# qt-programming-2024

./: .gitignore  CMakeLists.txt
README/: README.html  README.md
assets/: assets.qrc
src/: MyGame.cpp
src/Items/: Elemental.cpp  Elemental.h  Mountable.cpp  Mountable.h  Physical.cpp  Physical.h
src/Items/Armors/: Armor.cpp  Armor.h  FlamebreakerArmor.cpp  OldShirt.cpp  OldShirt.h
src/Items/Arrows/: Arrow.cpp  Arrow.h  FireArrow.cpp  FireArrow.h  IceArrow.cpp  IceArrow.h  ShockArrow.cpp  ShockArrow.h  WoodArrow.cpp  WoodArrow.h
src/Items/Bows/: Bow.cpp  Bow.h  ForestDwellersBow.cpp  ForestDwellersBow.h  PhrenicBow.cpp  PhrenicBow.h  SavageLynelBow.cpp  SavageLynelBow.h
src/Items/Characters/: Character.cpp  Character.h
src/Items/HeadEquipments/: CapOfTheHero.cpp  CapOfTheHero.h  FlamebreakerHelm.cpp  FlamebreakerHelm.h  HeadEquipment.cpp  HeadEquipment.h  ThunderHelm.cpp  ThunderHelm.h  ZantsHelmet.cpp  ZantsHelmet.h
src/Items/LegEquipments/: LegEquipment.cpp  LegEquipment.h  WellWornTrousers.cpp  WellWornTrousers.h
src/Items/Maps/: Battlefield.cpp  Battlefield.h  Map.cpp  Map.h  Platform.cpp  Platform.h
src/Items/MeleeWeapons/: MeleeWeapon.cpp  MeleeWeapon.h
src/Items/MeleeWeapons/LongSwords/: GreatThunderBlade.cpp  GreatThunderBlade.h  LongSword.cpp  LongSword.h
src/Items/MeleeWeapons/Spears/: FrostSpear.cpp  FrostSpear.h  Spear.cpp  Spear.h
src/Items/MeleeWeapons/Swords/: FlameBlade.cpp  FlameBlade.h  ForestDwellersSword.cpp  ForestDwellersSword.h  MasterSword.cpp  MasterSword.h  Sword.cpp  Sword.h
src/Scenes/: BattleScene.cpp  BattleScene.h
